# todo-app-with-rust

./: Makefile  README.md  docker-compose.yml
api/: Cargo.toml  Makefile
api/migrations/: 20221101160443_init.sql
api/src/: handlers.rs  main.rs  repositories.rs
db/: Dockerfile
