[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
dotenv = "0.15.0"
http-body = "0.4.5"
hyper = { version = "0.14.20", features = ["full"] }
mime = "0.3.16"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"] }
thiserror = "1.0.37"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
validator = { version = "0.16.0", features = ["derive"] }
